- Edit layout on Detail Activity - Edit layout on Detail Favorite Activity - Edit layout on Favorite Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,5 +99,8 @@
     <string name="forgot_password">Forgot password?</string>
     <string name="register">Register</string>
     <string name="book">Book</string>
+    <string name="riwayat_peminjaman">Riwayat Peminjaman</string>
+    <string name="tanggal_pinjam">Tanggal Pinjam</string>
+    <string name="tanggal_kembali">Tanggal Kembali</string>
 
 </resources>
